CMake: Add option to control whether Python bindings are built
For hawkey and libdnf to coexist on the same system, hawkey needs
to not provide its older version of the python-hawkey bindings.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,7 +33,9 @@ TARGET_LINK_LIBRARIES(hth libhawkey
 			   ${ZLIB_LIBRARY}
 			   ${RPMDB_LIBRARY})
 
-ADD_SUBDIRECTORY(python)
+IF (ENABLE_PYTHON_BINDINGS)
+  ADD_SUBDIRECTORY(python)
+ENDIF (ENABLE_PYTHON_BINDINGS)
 
 SET(HAWKEY_headers
     advisory.h
