--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,4 +41,7 @@ ADD_TEST(test_valgrind ${VALGRIND_PROGRAM} --error-exitcode=1 --leak-check=full
 SET_TESTS_PROPERTIES(test_valgrind PROPERTIES ENVIRONMENT "CK_FORK=no")
 ENDIF()
 
-ADD_SUBDIRECTORY (python)
+IF (ENABLE_PYTHON_BINDINGS)
+  ADD_SUBDIRECTORY (python)
+ENDIF (ENABLE_PYTHON_BINDINGS)
+
