--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
 
 OPTION (ENABLE_SOLV_URPMREORDER "Build with support for URPM-like solution reordering?" OFF)
 
+OPTION (ENABLE_PYTHON_BINDINGS "Build Python bindings?" ON)
+
 IF (ENABLE_SOLV_URPMREORDER)
    ADD_DEFINITIONS(-DLIBSOLV_FLAG_URPMREORDER=1)
 ENDIF()
