--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ OPTION (ENABLE_SOLV_URPMREORDER "Build with support for URPM-like solution reord
 
 OPTION (ENABLE_PYTHON_BINDINGS "Build Python bindings?" ON)
 
+OPTION (ENABLE_DOCUMENTATION "Build documentation?" ON)
+
 IF (ENABLE_SOLV_URPMREORDER)
    ADD_DEFINITIONS(-DLIBSOLV_FLAG_URPMREORDER=1)
 ENDIF()
@@ -62,4 +64,7 @@ ENDIF (RPMIO_LIBRARY)
 ADD_SUBDIRECTORY (src)
 ENABLE_TESTING()
 ADD_SUBDIRECTORY (tests)
-ADD_SUBDIRECTORY (doc)
+
+IF (ENABLE_DOCUMENTATION)
+  ADD_SUBDIRECTORY (doc)
+ENDIF (ENABLE_DOCUMENTATION)
